add CNAME and other minor changes

--- a/_config.yml
+++ b/_config.yml
@@ -17,3 +17,6 @@ github_username:  mdml
 
 # Build settings
 markdown: kramdown
+
+# Grunt handles this stuff
+exclude: ['images', 'css', 'js', 'fonts', '**.png', '**.jpg', '**.jpeg', '**.gif', '**.webp', '**.svg', '**.ico']
